debhelper (5.0.50) UNRELEASED; urgency=low

  * dh_installwm: If a path is not given, assume the file is in usr/bin, since
    usr/X11R6/bin now points to there.
  * Update urls to web page.

 -- Joey Hess <joeyh@debian.org>  Thu, 17 May 2007 00:17:43 -0400

debhelper (5.0.49) unstable; urgency=low

  * dh_installwm: Fix several stupid bugs, including:
    - man page handling was supposed to be v6 only and was not
    - typo in alternatives call
    - use the basename of the wm to get the man page name
    Closes: #420158
  * dh_installwm: Also make the code to find the man page more robust and
    fall back to not registering a man page if it is not found.

 -- Joey Hess <joeyh@debian.org>  Fri, 20 Apr 2007 13:43:35 -0400

debhelper (5.0.48) unstable; urgency=low

  * Remove use of #SECTION# from dh_installinfo postinst snippet
    that was accidentially re-added in 5.0.46 due to a corrupt svn checkout.
    Closes: #419849

 -- Joey Hess <joeyh@debian.org>  Wed, 18 Apr 2007 13:24:58 -0400

debhelper (5.0.47) unstable; urgency=low

  * Fix absurd typo. How did I test for an hour and miss that? Closes: #419612

 -- Joey Hess <joeyh@debian.org>  Mon, 16 Apr 2007 18:20:20 -0400

debhelper (5.0.46) unstable; urgency=low

  * Fix a typo in postinst-udev.

 -- Joey Hess <joeyh@debian.org>  Mon, 16 Apr 2007 12:39:41 -0400

debhelper (5.0.45) unstable; urgency=low

  * dh_installudev: Install udev rules directly into /etc/udev/rules.d/, not
    using the symlinks. MD has agreed that this is more appropriate for most
    packages.
  * That fixes the longstanding bug that the symlink was only made on brand
    new installs of the package, rather than on upgrade to the first version
    that includes the udev rules file. Closes: #359614
  * This avoids the need to run udevcontrol reload_rules, since inotify
    will see the file has changed. Closes: #414537
  * dh_installudev: Add preinst and postinst code to handle cleanly moving