@@ -3,8 +3,10 @@ debhelper (5.0.50) UNRELEASED; urgency=low
   * dh_installwm: If a path is not given, assume the file is in usr/bin, since
     usr/X11R6/bin now points to there.
   * Update urls to web page.
+  * Add some checks for attempts to act on packages not defined in the control
+    file.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 17 May 2007 00:17:43 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 27 May 2007 22:27:59 -0400
 
 debhelper (5.0.49) unstable; urgency=low
 
